--- a/rootdir/etc/ueventd.hammerhead.rc
+++ b/rootdir/etc/ueventd.hammerhead.rc
@@ -153,9 +153,9 @@
 /dev/msm_rtac             0660   system     audio
 /dev/msm_voicememo        0660   system     audio
 /dev/radio0               0640   fm_radio   fm_radio
-/dev/smd3                 0660   bluetooth  net_bt_stack
-/dev/smd2                 0660   bluetooth  net_bt_stack
-/dev/ttyHS99              0660   bluetooth  net_bt_stack
+/dev/smd3                 0660   bluetooth  bluethoot
+/dev/smd2                 0660   bluetooth  bluethoot
+/dev/ttyHS99              0660   bluetooth  bluethoot
 /dev/ttyHSL0              0660   system     system
 /dev/ttyHSL1              0660   system     system
 /dev/ttyHS1               0660   system     system
