--- a/rootdir/etc/init.hammerhead.rc
+++ b/rootdir/etc/init.hammerhead.rc
@@ -252,7 +252,7 @@ service qseecomd /system/bin/qseecomd
 service charger /sbin/healthd -c
     class charger
     critical
-    seclabel u:r:healthd:s0
+#    seclabel u:r:healthd:s0
 
 service qcamerasvr /system/bin/mm-qcamera-daemon
     class late_start
