--- a/rootdir/etc/init.hammerhead.rc
+++ b/rootdir/etc/init.hammerhead.rc
@@ -33,8 +33,11 @@ on init
 
     symlink /sdcard /storage/sdcard0
 
+    write /sys/block/zram0/comp_algorithm lz4
+
 on fs
     mount_all ./fstab.hammerhead
+    swapon_all ./fstab.hammerhead
     restorecon_recursive /persist
 
 on early-boot
